--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "amphp/http-client": "^4.6",
+        "nyholm/psr7": "^1.8",
+        "psr/http-client": "^1.0",
+        "revolt/event-loop": "^1.0",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
